--- a/includes/style.css
+++ b/includes/style.css
@@ -52,12 +52,12 @@ header{
 
 .top_menu{
 	color:#264951;
-	font-family:Arial;
+	font-family:Verdana;
 	font-weight:bold; 
 	float:left;
-	margin-top:30px; 
+	margin-top:35px; 
 	margin-left:69px; 
-	font-size:33px;
+	font-size:30px;
 }
 
 
@@ -79,7 +79,8 @@ a:link, a:visited{
 
 .back_pic h1{
 		margin-top:240px;
-		font-size:66px;
+		font-size:120px;
+		font-family:Arial;
 		border-bottom:#15a4fa solid 2px;
 }
 
@@ -104,7 +105,7 @@ h2{
 	display:inline-block;
 	font-size:27px;
 	margin-top:84px;
-	font-family:Cambria;
+	font-family:Myriad Hebrew;
 }
 
 .p_skill{
@@ -116,9 +117,9 @@ h2{
 
 #p_skill_text{
 	font-weight:normal;
-	font-size:29px;
+	font-size:40px;
 	color:black;
-	font-family:Cambria;
+	font-family:Myriad Pro;
 	margin-top:87px;
 	display: block;
 	display:inline-block;
@@ -134,6 +135,7 @@ h2{
 }
 .p_logo img {
 	vertical-align:middle;
+	font-family: Courier New;
 } 
 
 
@@ -149,6 +151,7 @@ footer{
 
 	
 }
+
 
 .footer_box{
 
@@ -173,4 +176,10 @@ footer{
 
 .footer_text img{
 		vertical-align:middle;
+}
+
+
+.in_cover_text{
+
+	font-size:20px;
 }
